--- a/package.json
+++ b/package.json
@@ -25,23 +25,22 @@
     "winston": "^3.13.0"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.34.4",
     "nodemon": "^3.0.3",
-    "prettier": "^3.2.4"
+    "prettier": "^2.8.8"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ednatrejo/news-explorer-backend.git"
+    "url": "https://github.com/ednatrejo/news-explorer-backend.git"
   },
   "keywords": [
     "backend"
   ],
   "bugs": {
-    "url": "https://github.com/ednatrejo/news-explorer-backend/issues"
+    "url": "https://github.com/ednatrejo/news-explorer-backend/s"
   },
-  "homepage": "https://github.com/ednatrejo/news-explorer-backend#readme"
+  "homepage": "https://github.com/ednatrejo/news-explorer-backend"
 }
